@@ -16,41 +16,44 @@
  */
 package org.apache.geronimo.console.jmsmanager.wizard;
 
-import javax.portlet.*;
-import javax.enterprise.deploy.spi.DeploymentManager;
+import java.io.BufferedOutputStream;
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Properties;
+import javax.enterprise.deploy.model.DDBean;
+import javax.enterprise.deploy.model.DDBeanRoot;
 import javax.enterprise.deploy.spi.DeploymentConfiguration;
+import javax.enterprise.deploy.spi.DeploymentManager;
 import javax.enterprise.deploy.spi.Target;
 import javax.enterprise.deploy.spi.TargetModuleID;
 import javax.enterprise.deploy.spi.status.ProgressObject;
-import javax.enterprise.deploy.model.DDBeanRoot;
-import javax.enterprise.deploy.model.DDBean;
-import java.io.IOException;
-import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.io.BufferedOutputStream;
-import java.io.FileOutputStream;
-import java.util.Properties;
-import java.util.List;
-import java.util.ArrayList;
-import java.util.Map;
-import java.util.Iterator;
-import java.net.URL;
-import org.apache.geronimo.console.util.PortletManager;
-import org.apache.geronimo.console.MultiPageAbstractHandler;
-import org.apache.geronimo.console.MultiPageModel;
-import org.apache.geronimo.deployment.tools.loader.ConnectorDeployable;
+import javax.portlet.ActionResponse;
+import javax.portlet.PortletRequest;
+import javax.portlet.PortletSession;
+import org.apache.commons.logging.Log;
+import org.apache.commons.logging.LogFactory;
+import org.apache.geronimo.connector.deployment.jsr88.AdminObjectDCB;
+import org.apache.geronimo.connector.deployment.jsr88.AdminObjectInstance;
+import org.apache.geronimo.connector.deployment.jsr88.ConnectionDefinition;
+import org.apache.geronimo.connector.deployment.jsr88.ConnectionDefinitionInstance;
 import org.apache.geronimo.connector.deployment.jsr88.Connector15DCBRoot;
 import org.apache.geronimo.connector.deployment.jsr88.ConnectorDCB;
 import org.apache.geronimo.connector.deployment.jsr88.ResourceAdapter;
 import org.apache.geronimo.connector.deployment.jsr88.ResourceAdapterInstance;
-import org.apache.geronimo.connector.deployment.jsr88.ConnectionDefinition;
-import org.apache.geronimo.connector.deployment.jsr88.ConnectionDefinitionInstance;
 import org.apache.geronimo.connector.deployment.jsr88.SinglePool;
-import org.apache.geronimo.connector.deployment.jsr88.AdminObjectDCB;
-import org.apache.geronimo.connector.deployment.jsr88.AdminObjectInstance;
+import org.apache.geronimo.console.MultiPageAbstractHandler;
+import org.apache.geronimo.console.MultiPageModel;
+import org.apache.geronimo.console.util.PortletManager;
+import org.apache.geronimo.deployment.service.jsr88.EnvironmentData;
+import org.apache.geronimo.deployment.tools.loader.ConnectorDeployable;
+import org.apache.geronimo.kernel.repository.Artifact;
 import org.apache.geronimo.naming.deployment.jsr88.GBeanLocator;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
 
 /**
  * Base class for portlet helpers
@@ -156,7 +159,7 @@ public abstract class AbstractHandler extends MultiPageAbstractHandler {
             }
         }
 
-        public void save(ActionResponse response) {
+        public void save(ActionResponse response, PortletSession session) {
             if(!isEmpty(rarURI)) response.setRenderParameter(RAR_FILE_PARAMETER, rarURI);
             if(!isEmpty(dependency)) response.setRenderParameter(DEPENDENCY_PARAMETER, dependency);
             if(!isEmpty(instanceName)) response.setRenderParameter(INSTANCE_NAME_PARAMETER, instanceName);
@@ -463,21 +466,37 @@ public abstract class AbstractHandler extends MultiPageAbstractHandler {
             //data.instanceName = data.instanceName.replaceAll("\\s", "");
             DeploymentManager mgr = PortletManager.getDeploymentManager(request);
             try {
-                URL url = PortletManager.getRepositoryEntry(request, data.getRarURI());
-                String str = url.toString();
-                if(str.indexOf(' ') > -1) {
-                    url = new URL(str.replaceAll(" ", "%20")); // try to avoid problems with spaces in path on Windows
-                }
-                ConnectorDeployable deployable = new ConnectorDeployable(url);
+                File rarFile = PortletManager.getRepositoryEntry(request, data.getRarURI());
+                ConnectorDeployable deployable = new ConnectorDeployable(rarFile.toURL());
                 DeploymentConfiguration config = mgr.createConfiguration(deployable);
                 final DDBeanRoot ddBeanRoot = deployable.getDDBeanRoot();
                 Connector15DCBRoot root = (Connector15DCBRoot) config.getDConfigBeanRoot(ddBeanRoot);
                 ConnectorDCB connector = (ConnectorDCB) root.getDConfigBean(ddBeanRoot.getChildBean(root.getXpaths()[0])[0]);
-                connector.setConfigID("console-jms-"+data.instanceName);
-                if(!isEmpty(data.dependency)) {
-                    connector.setParentID(data.dependency);
-                }
 
+                EnvironmentData environment = new EnvironmentData();
+                connector.setEnvironment(environment);
+                org.apache.geronimo.deployment.service.jsr88.Artifact configId = new org.apache.geronimo.deployment.service.jsr88.Artifact();
+                environment.setConfigId(configId);
+                configId.setGroupId("console.jms");
+                configId.setArtifactId(data.instanceName);
+                configId.setVersion("1.0");
+                configId.setType("rar");
+                if(data.dependency != null && !data.dependency.trim().equals("")) {
+                    Artifact artifact = Artifact.create(data.dependency.trim());
+                    org.apache.geronimo.deployment.service.jsr88.Artifact dep = new org.apache.geronimo.deployment.service.jsr88.Artifact();
+                    environment.setDependencies(new org.apache.geronimo.deployment.service.jsr88.Artifact[]{dep});
+                    dep.setArtifactId(artifact.getArtifactId());
+                    if(artifact.getGroupId() != null) {
+                        dep.setGroupId(artifact.getGroupId());
+                    }
+                    if(artifact.getGroupId() != null) {
+                        dep.setType(artifact.getType());
+                    }
+                    if(artifact.getVersion() != null) {
+                        dep.setVersion(artifact.getVersion().toString());
+                    }
+                }
+                
                 // Basic settings on RA plan and RA instance
                 ResourceAdapter ra;
                 if(connector.getResourceAdapter().length > 0) {
@@ -598,7 +617,7 @@ public abstract class AbstractHandler extends MultiPageAbstractHandler {
                     out.flush();
                     out.close();
                     Target[] targets = mgr.getTargets();
-                    ProgressObject po = mgr.distribute(targets, new File(url.getPath()), tempFile);
+                    ProgressObject po = mgr.distribute(targets, rarFile, tempFile);
                     waitForProgress(po);
                     if(po.getDeploymentStatus().isCompleted()) {
                         TargetModuleID[] ids = po.getResultTargetModuleIDs();
