@@ -18,22 +18,28 @@ package org.apache.geronimo.security.deployment;
 
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Properties;
 import java.util.Set;
-import javax.management.MalformedObjectNameException;
-import javax.management.ObjectName;
 
 import org.apache.geronimo.common.DeploymentException;
 import org.apache.geronimo.deployment.DeploymentContext;
+import org.apache.geronimo.deployment.service.GBeanBuilder;
 import org.apache.geronimo.deployment.service.XmlReferenceBuilder;
+import org.apache.geronimo.deployment.xbeans.PatternType;
+import org.apache.geronimo.gbean.AbstractName;
+import org.apache.geronimo.gbean.AbstractNameQuery;
 import org.apache.geronimo.gbean.GBeanData;
 import org.apache.geronimo.gbean.GBeanInfo;
 import org.apache.geronimo.gbean.GBeanInfoBuilder;
-import org.apache.geronimo.j2ee.j2eeobjectnames.J2eeContext;
+import org.apache.geronimo.gbean.GReferenceInfo;
+import org.apache.geronimo.gbean.ReferencePatterns;
 import org.apache.geronimo.j2ee.j2eeobjectnames.NameFactory;
+import org.apache.geronimo.kernel.GBeanAlreadyExistsException;
+import org.apache.geronimo.kernel.Naming;
+import org.apache.geronimo.kernel.Kernel;
 import org.apache.geronimo.security.jaas.JaasLoginModuleUse;
 import org.apache.geronimo.security.jaas.LoginModuleGBean;
 import org.apache.geronimo.xbeans.geronimo.loginconfig.GerAbstractLoginModuleType;
@@ -41,6 +47,7 @@ import org.apache.geronimo.xbeans.geronimo.loginconfig.GerLoginConfigType;
 import org.apache.geronimo.xbeans.geronimo.loginconfig.GerLoginModuleRefType;
 import org.apache.geronimo.xbeans.geronimo.loginconfig.GerLoginModuleType;
 import org.apache.geronimo.xbeans.geronimo.loginconfig.GerOptionType;
+import org.apache.geronimo.xbeans.geronimo.loginconfig.GerLoginConfigDocument;
 import org.apache.xmlbeans.XmlCursor;
 import org.apache.xmlbeans.XmlObject;
 import org.apache.xmlbeans.XmlOptions;
@@ -49,170 +56,159 @@ import org.apache.xmlbeans.XmlOptions;
 /**
  * @version $Rev$ $Date$
  */
-public class LoginConfigBuilder implements XmlReferenceBuilder
-{
-    public static final String LOGIN_CONFIG_NAMESPACE = "http://geronimo.apache.org/xml/ns/loginconfig-1.0";
+public class LoginConfigBuilder implements XmlReferenceBuilder {
+    public static final String LOGIN_CONFIG_NAMESPACE = GerLoginConfigDocument.type.getDocumentElementName().getNamespaceURI();
 
-    public String getNamespace()
-    {
+    private final Naming naming;
+
+    public LoginConfigBuilder(Kernel kernel) {
+        this.naming = kernel.getNaming();
+    }
+
+    public LoginConfigBuilder(Naming naming) {
+        this.naming = naming;
+    }
+
+    public String getNamespace() {
         return LOGIN_CONFIG_NAMESPACE;
     }
 
-    public Set getReferences(XmlObject xmlObject, DeploymentContext context, J2eeContext j2eeContext, ClassLoader classLoader) throws DeploymentException
-    {
+    public ReferencePatterns getReferences(XmlObject xmlObject, DeploymentContext context, AbstractName parentName, ClassLoader classLoader) throws DeploymentException {
         GerLoginConfigType loginConfig = (GerLoginConfigType) xmlObject.copy().changeType(GerLoginConfigType.type);
         XmlOptions xmlOptions = new XmlOptions();
         xmlOptions.setLoadLineNumbers();
         Collection errors = new ArrayList();
         xmlOptions.setErrorListener(errors);
-        if (!loginConfig.validate(xmlOptions))
-        {
+        if (!loginConfig.validate(xmlOptions)) {
             throw new DeploymentException("Invalid login configuration:\n" + errors + "\nDescriptor: " + loginConfig.toString());
         }
         XmlCursor xmlCursor = loginConfig.newCursor();
         List uses = new ArrayList();
         Set loginModuleNames = new HashSet();
-        try
-        {
+        try {
             boolean atStart = true;
-            while ((atStart && xmlCursor.toFirstChild()) || (!atStart && xmlCursor.toNextSibling()))
-            {
+            while ((atStart && xmlCursor.toFirstChild()) || (!atStart && xmlCursor.toNextSibling())) {
                 atStart = false;
                 XmlObject child = xmlCursor.getObject();
                 GerAbstractLoginModuleType abstractLoginModule = (GerAbstractLoginModuleType) child;
                 String controlFlag = abstractLoginModule.getControlFlag().toString();
                 boolean wrapPrincipals = (abstractLoginModule.isSetWrapPrincipals() && abstractLoginModule.getWrapPrincipals());
-                ObjectName loginModuleName;
+                ReferencePatterns loginModuleReferencePatterns;
                 String name;
-                if (abstractLoginModule instanceof GerLoginModuleRefType)
-                {
+                if (abstractLoginModule instanceof GerLoginModuleRefType) {
                     GerLoginModuleRefType loginModuleRef = (GerLoginModuleRefType) abstractLoginModule;
-                    String domain = trim(loginModuleRef.getDomain());
-                    String server = trim(loginModuleRef.getServer());
-                    String application = trim(loginModuleRef.getApplication());
-                    String module = trim(loginModuleRef.getModule());
-                    String type = trim(loginModuleRef.getType());
-                    if (type == null)
-                    {
-                        type = NameFactory.LOGIN_MODULE;
+                    PatternType patternType = loginModuleRef.getPattern();
+                    AbstractNameQuery loginModuleNameQuery = GBeanBuilder.buildAbstractNameQuery(patternType, USE_REFERENCE_INFO);
+                    loginModuleReferencePatterns = new ReferencePatterns(loginModuleNameQuery);
+                    name = (String) loginModuleNameQuery.getName().get("name");
+                    if (name == null) {
+                        throw new DeploymentException("You must specify the name of the login module in the login module ref " + patternType);
                     }
-                    name = trim(loginModuleRef.getName());
-                    try
-                    {
-                        loginModuleName = NameFactory.getComponentName(domain, server, application, module, name, type, j2eeContext);
-                    }
-                    catch (MalformedObjectNameException e)
-                    {
-                        throw new DeploymentException("cannot construct login module name from parts,", e);
-                    }
-                    try
-                    {
-                        String loginDomain = (String) context.getAttribute(loginModuleName, "loginDomainName");
-                        if (!loginModuleNames.add(loginDomain))
-                        {
-                            throw new DeploymentException("Security realm contains two login domains called '" + loginDomain + "'");
-                        }
-                    }
-                    catch (DeploymentException e)
-                    {
-                        throw e;
-                    }
-                    catch (Exception e)
-                    {
-                        throw new DeploymentException("Unable to create reference to login module " + name, e);
-                    }
-                }
-                else if (abstractLoginModule instanceof GerLoginModuleType)
-                {
+//TODO configid reinstate this check for duplicate domain names
+//                    try
+//                    {
+//                        String loginDomain = (String) context.getAttribute(loginModuleName, "loginDomainName");
+//                        if (!loginModuleNames.add(loginDomain))
+//                        {
+//                            throw new DeploymentException("Security realm contains two login domains called '" + loginDomain + "'");
+//                        }
+//                    }
+//                    catch (DeploymentException e)
+//                    {
+//                        throw e;
+//                    }
+//                    catch (Exception e)
+//                    {
+//                        throw new DeploymentException("Unable to create reference to login module " + name, e);
+//                    }
+                } else if (abstractLoginModule instanceof GerLoginModuleType) {
                     //create the LoginModuleGBean also
-                    name = null;
-                    loginModuleName = null;
+                    AbstractName loginModuleName;
 
                     GerLoginModuleType loginModule = (GerLoginModuleType) abstractLoginModule;
                     name = trim(loginModule.getLoginDomainName());
-                    if (!loginModuleNames.add(name))
-                    {
+                    if (!loginModuleNames.add(name)) {
                         throw new DeploymentException("Security realm contains two login domains called '" + name + "'");
                     }
                     String className = trim(loginModule.getLoginModuleClass());
                     boolean serverSide = loginModule.getServerSide();
                     Properties options = new Properties();
                     GerOptionType[] optionArray = loginModule.getOptionArray();
-                    for (int j = 0; j < optionArray.length; j++)
-                    {
+                    for (int j = 0; j < optionArray.length; j++) {
                         GerOptionType gerOptionType = optionArray[j];
                         String key = gerOptionType.getName();
                         String value = trim(gerOptionType.getStringValue());
                         options.setProperty(key, value);
                     }
-                    try
-                    {
-                        loginModuleName = NameFactory.getComponentName(null, null, null, null, name, NameFactory.LOGIN_MODULE, j2eeContext);
-                    }
-                    catch (MalformedObjectNameException e)
-                    {
-                        throw new DeploymentException("cannot construct login module use name from parts,", e);
-                    }
+                    loginModuleName = naming.createChildName(parentName, name, NameFactory.LOGIN_MODULE);
+                    loginModuleReferencePatterns = new ReferencePatterns(loginModuleName);
                     GBeanData loginModuleGBeanData = new GBeanData(loginModuleName, LoginModuleGBean.GBEAN_INFO);
                     loginModuleGBeanData.setAttribute("loginDomainName", name);
                     loginModuleGBeanData.setAttribute("loginModuleClass", className);
                     loginModuleGBeanData.setAttribute("options", options);
-                    loginModuleGBeanData.setAttribute("serverSide", new Boolean(serverSide));
+                    loginModuleGBeanData.setAttribute("serverSide", Boolean.valueOf(serverSide));
                     loginModuleGBeanData.setAttribute("wrapPrincipals", Boolean.valueOf(wrapPrincipals));
 
                     context.addGBean(loginModuleGBeanData);
-                }
-                else
-                {
+                } else {
                     throw new DeploymentException("Unknown abstract login module type: " + abstractLoginModule.getClass());
                 }
-                ObjectName thisName;
-                try
-                {
-                    thisName = NameFactory.getComponentName(null, null, null, null, name, "LoginModuleUse", j2eeContext);
-                }
-                catch (MalformedObjectNameException e)
-                {
-                    throw new DeploymentException("cannot construct login module use name from parts,", e);
-                }
+                AbstractName thisName;
+                thisName = naming.createChildName(parentName, name, "LoginModuleUse");
                 GBeanData loginModuleUseGBeanData = new GBeanData(thisName, JaasLoginModuleUse.GBEAN_INFO);
                 loginModuleUseGBeanData.setAttribute("controlFlag", controlFlag);
-                loginModuleUseGBeanData.setReferencePattern("LoginModule", loginModuleName);
+                loginModuleUseGBeanData.setReferencePatterns("LoginModule", loginModuleReferencePatterns);
                 uses.add(loginModuleUseGBeanData);
             }
-            for (int i = uses.size() - 1; i >= 0; i--)
-            {
+            for (int i = uses.size() - 1; i >= 0; i--) {
                 GBeanData data = (GBeanData) uses.get(i);
-                if (i > 0)
-                {
-                    ((GBeanData) uses.get(i - 1)).setReferencePattern("Next", data.getName());
+                if (i > 0) {
+                    ((GBeanData) uses.get(i - 1)).setReferencePattern("Next", data.getAbstractName());
                 }
                 context.addGBean(data);
             }
         }
-        finally
-        {
+        catch (GBeanAlreadyExistsException e) {
+            throw new DeploymentException(e);
+        } finally {
             xmlCursor.dispose();
         }
-        return uses.size() == 0 ? Collections.EMPTY_SET : Collections.singleton(((GBeanData) uses.get(0)).getName());
+        return uses.size() == 0 ? null : new ReferencePatterns(((GBeanData) uses.get(0)).getAbstractName());
     }
 
-    private String trim(String string)
-    {
+    private String trim(String string) {
         return string == null ? null : string.trim();
     }
 
     public static final GBeanInfo GBEAN_INFO;
 
-    static
-    {
+    private static final GReferenceInfo USE_REFERENCE_INFO;
+
+    static {
         GBeanInfoBuilder infoBuilder = GBeanInfoBuilder.createStatic(LoginConfigBuilder.class, "XmlReferenceBuilder");
+        infoBuilder.addAttribute("kernel", Kernel.class, false, false);
+        infoBuilder.setConstructor(new String[] {"kernel"});
         infoBuilder.addInterface(XmlReferenceBuilder.class);
         GBEAN_INFO = infoBuilder.getBeanInfo();
+
+        Set referenceInfos = JaasLoginModuleUse.GBEAN_INFO.getReferences();
+        GReferenceInfo found = null;
+        for (Iterator iterator = referenceInfos.iterator(); iterator.hasNext();) {
+            GReferenceInfo testReferenceInfo = (GReferenceInfo) iterator.next();
+            String testRefName = testReferenceInfo.getName();
+            if (testRefName.equals("LoginModule")) {
+                found = testReferenceInfo;
+                break;
+            }
+        }
+        if (found == null) {
+            throw new RuntimeException("Someone changed the gbeaninfo on JaasLoginModuleUse");
+        }
+        USE_REFERENCE_INFO = found;
+
     }
 
-    public static GBeanInfo getGBeanInfo()
-    {
+    public static GBeanInfo getGBeanInfo() {
         return GBEAN_INFO;
     }
 }
